tests/sksl/errors/ProgramTooLarge_Parameters.glsl
### Compilation failed:

error: 13: variable 'big_chungus' exceeds the stack size limit
          S no_report /*we don't need to report overflows past the first*/) {}
                                                                            ^^
1 error
